--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/universidad/universidad.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/universidad/universidad.component.html
@@ -40,13 +40,11 @@
         </div>
     </div>
     <table class="table table-striped mt-3">
-        <tbody *ngFor="let uni of universidad">
+        <tbody *ngFor="let univ of universidad">
             <div class="row text-center">
-                <div class="col-1">{{uni.id}}</div>
-                <div class="col-7">{{uni.nombre}}</div>
+                <div class="col-1">{{univ.id}}</div>
+                <div class="col-7">{{univ.nombre}}</div>
 
-                <!-- Editar universidad -->
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" [routerLink]="['/datos-escolares/universidad', uni.id]" data-bs-toggle="modal" data-bs-target="#edit-uni">Editar</button>
 
                 <div class="modal fade" id="edit-uni" tabindex="-1" aria-labelledby="editar" aria-hidden="true">
                     <div class="modal-dialog">
@@ -58,17 +56,19 @@
                         <div class="modal-body">
                             <div class="mb-3">
                                 <label for="exampleFormControlInput1" class="form-label">Nombre de la Universidad</label>
-                                <input type="text" class="form-control" placeholder="Nombre de la Universidad" id="email" name="email" [(ngModel)]="uni.nombre">
+                                <input type="text" class="form-control" placeholder="Nombre de la Universidad" id="email" name="email" [(ngModel)]="univ.nombre">
                             </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary border-0" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="button" class="btn btn-primary border-0" data-bs-dismiss="modal" (click)="update()">Editar</button>
+                            <button type="button" class="btn btn-primary border-0" data-bs-dismiss="modal" (click)="editarUniversidad()">Editar</button>
                         </div>
                     </div>
                     </div>
                 </div>
-                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="deleteUni(uni.id)">Eliminar</button>
+                <!-- Editar universidad -->
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" data-bs-toggle="modal" data-bs-target="#edit-uni"[routerLink]="['/datos-escolares/universidad', univ.id]">Editar</button>
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="deleteUni(univ.id)">Eliminar</button>
             </div>
         </tbody>
     </table>
