--- a/frontend/recursos/src/app/components/admin/panel-admin/ftd-baja/ftd-baja.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/ftd-baja/ftd-baja.component.html
@@ -19,6 +19,7 @@
             <div class="col-2">Primer Apellido</div>
             <div class="col-2">Segundo Apellido</div>
             <div class="col">Alta</div>
+            <div class="col">Eliminar</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
