--- a/frontend/recursos/src/app/components/user/registro-aspirante/registro-aspirante.component.html
+++ b/frontend/recursos/src/app/components/user/registro-aspirante/registro-aspirante.component.html
@@ -97,7 +97,7 @@
         <!-- boton -->
             <button type="button" class="btn btn-secondary border-0" role="button" (click)="create()" [disabled]="miFormulario.invalid" *ngIf="!estudiante.id else elseBlock">Siguiente</button>
             <ng-template #elseBlock>
-                <button type="button" class="btn btn-secondary border-0" role="button" (click)="update()">Actualizar</button>
+                <button type="button" class="btn btn-secondary border-0" role="button" (click)="update()" [disabled]="miFormulario.invalid">Actualizar</button>
             </ng-template>
     </div>
     </div>
