--- a/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ingreso/registro-datos-ingreso.component.html
+++ b/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ingreso/registro-datos-ingreso.component.html
@@ -1,4 +1,3 @@
-<!-- Nav -->
 <app-navv></app-navv>
 
 <!-- Modal -->
@@ -6,30 +5,30 @@
 <form>
     <div class="container-md mt-5">
         <h1 class="text-center mt-5 col-title">{{ingreso.id ? 'Edición': 'Registro'}} de Datos de Ingreso</h1>
-    
-    <div class="row container-md " >
+    <div class="row" (ngSubmit) = cargar()>
         <div class="col-md-3 position-relative mt-4">
-            <label for="tramite" class="form-label">Tramite</label>
-            <select [compareWith]="compararTramite" class="form-select" id="tramite" name="tramite" [(ngModel)]="ingreso.tramite">
-                <option selected disabled value="" [ngValue]="undefined">Elige una de las opciones</option>
-                <option *ngFor="let tramite of tramite" [ngValue]="tramite">{{tramite.nombreTramite}}</option>
-            </select>
-        </div>   
-        <div class="col-md-3 position-relative mt-4">
-            <label for="perfilamiento" class="form-label">Perfilamiento</label>
-            <select [compareWith]="compararTramite" class="form-select" id="perfilamiento" name="perfilamiento" [(ngModel)]="ingreso.perfilamiento">
-                <option selected disabled value="" [ngValue]="undefined">Elige una de las opciones</option>
-                <option *ngFor="let perfilamiento of perfilamiento" [ngValue]="perfilamiento">{{perfilamiento.nombrePerfilamiento}}</option>
-            </select>
+            <label for="tramite" class="form-label">Trámite</label>
+            <div>
+                <select [compareWith]="compararTramite" class="form-select" id="tramite" name="tramite" [(ngModel)]="ingreso.tramite">
+                    <option *ngFor="let tramite of tramite" [ngValue]="tramite">{{tramite.nombreTramite}}</option>
+                </select>
+            </div>
         </div> 
+        <div class="col-md-3 position-relative mt-4">
+            <label for="perfilamiento" class="form-label">Perilamiento</label>
+            <div>
+                <select [compareWith]="compararPerfilamiento" class="form-select" id="perfilamiento" name="perfilamientoq" [(ngModel)]="ingreso.perfilamiento">
+                    <option *ngFor="let perfilamiento of perfilamiento" [ngValue]="perfilamiento">{{perfilamiento.nombrePerfilamiento}}</option>
+                </select>
+            </div>
+        </div>
         <div class="col-md-3 position-relative mt-4">
             <label for="turno" class="form-label">Turno</label>
             <select class="form-select" id="turno" name="turno" [(ngModel)]="ingreso.turno">
-                <option selected disabled value="">Elige una de las opciones</option>
                     <option value="Matutino">Matutino</option>
                     <option value="Vespertino">Vespertino</option>
             </select>
-        </div> 
+        </div>
         <div class="col-md-3 position-relative mt-4">
             <label for="horario" class="form-label">Horario</label>
             <select class="form-select" id="horario" name="horario" [(ngModel)]="ingreso.horario">
@@ -38,12 +37,13 @@
                     <option value="14:00-19:00">14:00-19:00a</option>
             </select>
         </div> 
-        <div class="col-md-4 position-relative mt-4">
+        <div class="col-md-3 position-relative mt-4">
             <label for="modalidad" class="form-label">Modalidad</label>
-            <select [compareWith]="compararModalidad" class="form-select" id="modalidad" name="modalidad" [(ngModel)]="ingreso.modalidad">
-                <option [ngValue]="undefined" selected disabled value>Elige una de las modalidades</option>
-                <option value="mod.id" *ngFor="let mod of modalidad">{{mod.nombre}}</option>
-            </select>
+            <div>
+                <select [compareWith]="compararModalidad" class="form-select" id="modalidad" name="modalidad" [(ngModel)]="ingreso.modalidad">
+                    <option *ngFor="let modalidad of modalidad" [ngValue]="modalidad">{{modalidad.nombre}}</option>
+                </select>
+            </div>
         </div>
         <div class="col-md-4 position-relative mt-4">
             <label form="cv" class="form-label">Curriculum Vitae (CV)</label>
@@ -55,10 +55,9 @@
         </div>
 
         <!-- boton -->
-            <button type="button" class="btn btn-secondary border-0 mt-4" role="button" (click)="guardado()" *ngIf="!ingreso.id else elseBlock">Siguiente</button>
-            <ng-template #elseBlock>
-                <button type="button" class="btn btn-secondary border-0 mt-4" role="button" (click)="update()">Actualizar</button>
-            </ng-template>
-        </div>   
+        <button type="button" class="btn btn-secondary border-0 mt-4" role="button" (click)="create()" *ngIf="!ingreso.id else elseBlock">Siguiente</button>
+        <ng-template #elseBlock>
+            <button type="button" class="btn btn-secondary border-0 mt-4" role="button" (click)="update()">Actualizar</button>
+        </ng-template>
     </div>
-</form>
+    </div>
