--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-ingreso/tramite/tramite.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-ingreso/tramite/tramite.component.html
@@ -7,9 +7,12 @@
     <!-- Titiulo -->
     <h1 class="mt-5 font-weight-bold mb-4 text-center col-title">Trámite</h1>
 
-    <button type="button" class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" data-bs-toggle="modal" data-bs-target="#modal-perfilamiento">Agregar Trámite</button>
-    <!-- Modal del boton agregar perfilamiento -->
-    <div class="modal fade" id="modal-perfilamiento" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <button type="button" class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" data-bs-toggle="modal" data-bs-target="#modal-tramite" *ngIf="!tra.id else elseBlock">Agregar Trámite</button>
+    <ng-template #elseBlock>
+        <button type="button" class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" data-bs-toggle="modal" data-bs-target="#modal-tramite">Editar</button>
+    </ng-template>
+    <!-- Modal del boton agregar tramite -->
+    <div class="modal fade" id="modal-tramite" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -24,7 +27,10 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary border-0" data-bs-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary border-0" data-bs-dismiss="modal" (click)="create()">Guardar</button>
+                <button type="button" class="btn btn-primary border-0" data-bs-dismiss="modal" (click)="create()" *ngIf="!tra.id else elseBloc">Guardar</button>
+                <ng-template #elseBloc>
+                    <button type="button" class="btn btn-primary border-0" data-bs-dismiss="modal" (click)="update()">Actualizar</button>
+                </ng-template>
             </div>
         </div>
         </div>
@@ -46,29 +52,9 @@
                 <div class="col-7">{{tra.nombreTramite}}</div>
 
                 <!-- Editar perfilamiento -->
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1"  data-bs-toggle="modal" data-bs-target="#edit-plan">Editar</button>
-                <!-- Modal -->
-                <div class="modal fade" id="edit-plan" tabindex="-1" aria-labelledby="editar" aria-hidden="true">
-                    <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="editar">Editar Perfilamiento</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="mb-3">
-                                <label for="exampleFormControlInput1" class="form-label">Nombre del Perfilamiento</label>
-                                <input type="text" class="form-control" placeholder="Nombre del Perfilamiento" id="perfilamiento" name="perfilamiento" [(ngModel)]="tra.nombreTramite">
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary border-0" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="button" class="btn btn-primary border-0" data-bs-dismiss="modal" (click)="update()" [routerLink]="['/datos-ingreso/perfilamiento', tra.id]">Editar</button>
-                        </div>
-                    </div>
-                    </div>
-                </div>
-                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="deletePerfilamineto(tra.id)">Eliminar</button>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1"  data-bs-toggle="modal" data-bs-target="#modal-tramite" [routerLink]="['/datos-ingreso/tramite', tra.id]">Editar</button>
+                
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="deletePerfilamineto(tra)">Eliminar</button>
             </div>
         </tbody>
     </table>
