--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-ingreso/perfilamiento/perfilamiento.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-ingreso/perfilamiento/perfilamiento.component.html
@@ -7,7 +7,7 @@
     <!-- Titiulo -->
     <h1 class="mt-5 font-weight-bold mb-4 text-center col-title">Perfilamiento</h1>
 
-    <button type="button" class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" data-bs-toggle="modal" data-bs-target="#modal-perfilamiento" *ngIf="!perf.id else elseBlock">Agregar Trámite</button>
+    <button type="button" class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" data-bs-toggle="modal" data-bs-target="#modal-perfilamiento" *ngIf="!perf.id else elseBlock">Agregar Perfilamiento</button>
     <ng-template #elseBlock>
         <button type="button" class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" data-bs-toggle="modal" data-bs-target="#modal-perfilamiento">Editar</button>
     </ng-template>
