--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-ingreso/tramite/tramite.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-ingreso/tramite/tramite.component.html
@@ -54,7 +54,7 @@
                 <!-- Editar perfilamiento -->
                 <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1"  data-bs-toggle="modal" data-bs-target="#modal-tramite" [routerLink]="['/datos-ingreso/tramite', tra.id]">Editar</button>
                 
-                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="deletePerfilamineto(tra)">Eliminar</button>
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="deleteTramite(tra)">Eliminar</button>
             </div>
         </tbody>
     </table>
