--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -25,7 +25,7 @@
                 <li><a class="dropdown-item" (click)="tramite()">Trámite</a></li>
                 <li><a class="dropdown-item" (click)="modalidad()">Modalidad</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item">Beca</a></li>
+                <li><a class="dropdown-item" (click)="beca()">Beca</a></li>
                 <li><a class="dropdown-item">Grupo</a></li>
                 <li><a class="dropdown-item">Tutor</a></li>
             </ul>
