--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-ingreso/modalidad/modalidad.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-ingreso/modalidad/modalidad.component.html
@@ -23,7 +23,7 @@
           <div class="modal-body">
               <div class="mb-3">
                   <label for="exampleFormControlInput1" class="form-label">Nombre de la Modalidad</label>
-                  <input type="text" class="form-control" placeholder="Nombre del Trámite" id="perfilamiento" name="perfilamiento" [(ngModel)]="mod.nombre">
+                  <input type="text" class="form-control" placeholder="Nombre de la Modalidad" id="perfilamiento" name="perfilamiento" [(ngModel)]="mod.nombre">
               </div>
           </div>
           <div class="modal-footer">
