--- a/frontend/recursos/src/app/components/admin/panel/watch-datos-escolares/watch-datos-escolares.component.html
+++ b/frontend/recursos/src/app/components/admin/panel/watch-datos-escolares/watch-datos-escolares.component.html
@@ -20,10 +20,10 @@
                     <td class="col">{{escolares.id}}</td>
                     <td class="col">{{escolares.correoEscolar}}</td>
                     <td class="col">{{escolares.carrera}}</td>
-                    <td class="col">{{escolares.universidad}}</td>
+                    <td class="col">{{escolares.universidad.nombre}}</td>
                     <td class="col">{{escolares.matriculaEscolar}}</td>
-                    <td class="col">{{escolares.modalidadEscolar}}</td>
-                    <td class="col">{{escolares.planesEducativos}}</td>
+                    <td class="col">{{escolares.modalidadEscolar.nombre}}</td>
+                    <td class="col">{{escolares.planesEducativos.nombre}}</td>
                     <td class="col">{{escolares.periodo}}</td>
                     <td>
                 </tr>
