--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/datos-escolares.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/datos-escolares.component.html
@@ -26,7 +26,7 @@
                 <div class="col-1">{{escolares.id}}</div>
                 <div class="col-3">{{escolares.correoEscolar}}</div>
                 <div class="col-3">{{escolares.carrera}}</div>
-                <div class="col-2">{{escolares.modalidadEscolar}}</div>
+                <div class="col-2">{{escolares.modalidadEscolar.nombre}}</div>
                 <button type="button" class="btn btn-secondary btn-sm border-0 me-1 col-1 text-white mt-1" [routerLink]="['/registro-datos-escolares', escolares.id]">Editar</button>
                 <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click) ="deleteEstudiante(escolares.id)">Eliminar</button>
             </div>
